--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
     </div>
     <div class="row">
       <footer>
-        Copyright <a href="https://twitter.com/shunito">Shunsuke Ito.</a> The source code is licensed MIT.
+        Copyright <a href="https://twitter.com/shunito">Shunsuke Ito.</a> The <a href="https://github.com/shunito/fastread">source code</a> is licensed MIT.
       </footer>
     </div>
   </section>
