微振動アクション追加

--- a/index.html
+++ b/index.html
@@ -63,7 +63,12 @@
               </select>
             </div>
           </div>
-
+          <div class="p-form__group">
+              <input type="checkbox" id="checkVibration">
+              <label for="checkVibration" class="p-form__label">微振動
+              </label>
+          </div>
+  
           <div class="p-form__group">
             <button class="p-button--positive" id="btnShow" type="button">表示</button>
           </div>
